--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -203,19 +203,19 @@ section.success a.active {
     }
 }
 
-#portfolio .portfolio-item {
+#body .body-item {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#body .body-item .body-link {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption {
+#body .body-item .body-link .caption {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -226,11 +226,11 @@ section.success a.active {
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption:hover {
+#body .body-item .body-link .caption:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+#body .body-item .body-link .caption .caption-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -241,21 +241,21 @@ section.success a.active {
     color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+#body .body-item .body-link .caption .caption-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+#body .body-item .body-link .caption .caption-content h3,
+#body .body-item .body-link .caption .caption-content h4 {
     margin: 0;
 }
 
-#portfolio * {
+#body * {
     z-index: 2;
 }
 
 @media(min-width:767px) {
-    #portfolio .portfolio-item {
+    #body .body-item {
         margin: 0 0 30px;
     }
 }
@@ -394,7 +394,7 @@ footer .footer-below {
     outline: 0;
 }
 
-.portfolio-modal .modal-content {
+.body-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
     border: 0;
@@ -405,20 +405,20 @@ footer .footer-below {
     box-shadow: none;
 }
 
-.portfolio-modal .modal-content h2 {
+.body-modal .modal-content h2 {
     margin: 0;
     font-size: 3em;
 }
 
-.portfolio-modal .modal-content img {
+.body-modal .modal-content img {
     margin-bottom: 30px;
 }
 
-.portfolio-modal .modal-content .item-details {
+.body-modal .modal-content .item-details {
     margin: 30px 0;
 }
 
-.portfolio-modal .close-modal {
+.body-modal .close-modal {
     position: absolute;
     top: 25px;
     right: 25px;
@@ -428,11 +428,11 @@ footer .footer-below {
     cursor: pointer;
 }
 
-.portfolio-modal .close-modal:hover {
+.body-modal .close-modal:hover {
     opacity: .3;
 }
 
-.portfolio-modal .close-modal .lr {
+.body-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
     height: 75px;
@@ -443,7 +443,7 @@ footer .footer-below {
     transform: rotate(45deg);
 }
 
-.portfolio-modal .close-modal .lr .rl {
+.body-modal .close-modal .lr .rl {
     z-index: 1052;
     width: 1px;
     height: 75px;
@@ -453,7 +453,7 @@ footer .footer-below {
     transform: rotate(90deg);
 }
 
-.portfolio-modal .modal-backdrop {
+.body-modal .modal-backdrop {
     display: none;
     opacity: 0;
 }
