--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4544,7 +4544,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #2c3e50;
+  background-color: #400040;
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
